tests/ui/crate_local_distributed_slice/wrong_type.stderr
error[E0308]: mismatched types
  --> $DIR/wrong_type.rs:6:35
   |
LL | distributed_slice_element!(MEOWS, 10);
   |                                   ^^ expected `&str`, found integer

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
